--- a/assets/scss/helpers/_variables.scss
+++ b/assets/scss/helpers/_variables.scss
@@ -37,6 +37,7 @@ $green-hover: #22b798;
 $green-background-hover-icon: #12806a;
 $green-footer : #1ea78d;
 $green-background-header : #07161d;
+$title :#0eb493;
 //
 // Fonts size
 //
