--- a/assets/scss/layout/_main.scss
+++ b/assets/scss/layout/_main.scss
@@ -2,7 +2,9 @@
   width: 100%;
   height: 100%;
 }
-
+.container{
+  margin: auto;
+}
 .swiper-slide {
   text-align: center;
   font-size: 18px;
@@ -44,6 +46,72 @@
   .swiper-container-horizontal>.swiper-pagination-bullets .swiper-pagination-bullet{
     @media #{$info-phone} {
       margin: 0 5px;
+    }
+  }
+}
+
+.slick-dots li button{
+    border: 1px solid #c7ced4;
+    border-radius: 10px;
+    width: 8px;
+    height: 8px;
+    padding: 3px;
+    &::before{
+      color: transparent;
+    }
+}
+.slick-dots li.slick-active button{
+  background-color: #062033;
+  border: 1px solid #062033;
+  &:before{
+    color: transparent;
+  }
+}
+.slick-dots{
+  bottom: -75%;
+  @media #{$info-tablet-horizontal} {
+    bottom: -50%;
+  }
+}
+
+.slick-next , .slick-prev {
+  display: none !important;
+}
+
+.title{
+  text-align: center;
+  font-family: 'Open Sans', sans-serif;
+  h2{
+    color: $title;
+    font-size: 28px;
+    font-weight: 800;
+  }
+  .title__img{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10px;
+    hr{
+      width: 90px;
+      border-top: 1px solid #dce1e5;
+    }
+     img{
+       margin: 0 15px;
+       width: 20px;
+       height: 15px;
+       background-size: cover;
+    }
+  }
+ 
+  p{
+    font-weight: 600;
+    font-size: 18px;
+    color: #384d5c;
+    padding: 0 100px;
+    margin: 20px 0 45px 0;
+    line-height: 1.5;
+    @media #{$info-phone} {
+      padding: 0 20px;
     }
   }
 }
