--- a/assets/scss/page/_main-brandi.scss
+++ b/assets/scss/page/_main-brandi.scss
@@ -74,6 +74,17 @@
         font-weight: bold;
         padding: 10px 20px;
         transition: .3s;
+        @media #{$info-phone} {
+          padding: 10px 5px;
+          margin: 0;
+
+        }
+        @media #{$info-phone-4} {
+          font-size: 13px;
+          padding: 10px 5px;
+          margin: 0;
+            
+        }
         &.is-checked, &.is-selected{
           background-color: #0eb493;
           color: #fff;
@@ -90,6 +101,9 @@
     .works__content{
       
       color: #fff;
+      @media #{$info-phone} {
+        min-height: 500px;
+      }
       .grid{
         background: transparent;
         border: none;
@@ -98,10 +112,14 @@
         padding: 0;
       }
       .isotope-block-pic{
+        min-height: 280px;
         &>img{
           position: relative;
-          height: 100%;
+          min-height: 280px;
           width: 100%;
+          @media #{$info-phone} {
+            object-fit: cover;
+          }
         }
         &:hover{
           .works__content-hover{
