--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -68,6 +68,7 @@ header{
         font-family: 'Open Sans', sans-serif;
         font-weight: 400;
         position: relative;
+        color: #546365;
         @media #{$info-phone} {
           display: none;
         }
@@ -147,6 +148,10 @@ header{
             align-items: center;
             display: flex;
             height: 100%;
+            outline: none;
+            &:focus{
+              background-color: transparent;
+            }
           }
         }
       }
