--- a/assets/scss/page/_main-brandi.scss
+++ b/assets/scss/page/_main-brandi.scss
@@ -56,14 +56,12 @@
  
   .works{
     font-family: 'Open Sans', sans-serif;
-    .row{
-      margin: 0;
-    }
+ 
     .works__menu{
       display: flex;
       justify-content: center;
       margin-bottom: 35px;
-      .button{
+      button{
         border: none;
         color: #000;
         background: #fff;
@@ -98,36 +96,7 @@
         }
       }
     }
-    .works__content{
-      
-      color: #fff;
-      @media #{$info-phone} {
-        min-height: 500px;
-      }
-      .grid{
-        background: transparent;
-        border: none;
-      }
-      .col-sm-6 ,.col-md-4 ,.col-lg-3{
-        padding: 0;
-      }
-      .isotope-block-pic{
-        min-height: 280px;
-        &>img{
-          position: relative;
-          min-height: 280px;
-          width: 100%;
-          @media #{$info-phone} {
-            object-fit: cover;
-          }
-        }
-        &:hover{
-          .works__content-hover{
-            display: flex;
-            transition: .4s;
-          }
-        }
-      }
+    
       
       .works__content-hover{
         position: absolute;
@@ -137,31 +106,90 @@
         flex-direction: column;
         text-align: center;
         width: 100%;
-        height: 99.2%;
+        height: 100%;
         background-color: rgba($color: #20b597, $alpha: .8);
         display: none;
         transition: .4s;
         .works__content__img{
-         margin-bottom: 15px;
+          margin: 0 auto 15px;
+          @media #{$info-phone} {
+              margin: 0 auto 5px;
+          }
         }
         img{
           height: 50px;
           width: 50px;
           border: 1px solid;
-          border-radius: 25px;
+          border-radius: 80px;
           padding: 16px;
           object-fit: contain;
+          @media #{$info-phone} {
+            height: 4vw;
+            width: 4vw;
+            padding: 1vw;
+
+          }
         }
         h3{
           font-weight: bold;
-          font-size: 15px;
+          font-size: 1vw;
           line-height: 2.3;
         }
         p{
-          font-size: 13px;
+          font-size: .9vw;
           font-weight: 400;
         }
       }
+      
+.hidden { display: none;  }
+.height{min-height: 500px;}
+// #filter {
+//   text-align: center;
+//   padding: 15px;
+// }
+
+
+
+
+#filter button:focus { outline: 0; }
+
+#filter button.active{
+  background-color: #0eb493;
+
+}
+
+#posts {
+  margin: 0 auto;
+}
+
+#posts .post {
+  width: 25%;
+  float: left;
+  text-align: center;
+  cursor: pointer;
+  position: relative;
+  z-index: 1;
+  display: inline-block;
+  &:hover{
+    .works__content-hover{
+      display: flex;
     }
   }
 }
+
+#posts .post>img {
+  position: relative;
+  display: block;
+  opacity: 1;
+  -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
+  transition: opacity 0.35s, transform 0.35s;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  min-height: 100%;
+  object-fit: cover;
+  width: 100%;
+}
+
+  }
+}
+
