feat : team , facts , discuss

--- a/assets/scss/base/_typography.scss
+++ b/assets/scss/base/_typography.scss
@@ -16,7 +16,9 @@ body {
     //     }
     // }
 }
-
+main{
+  font-family: 'Open Sans', sans-serif;
+}
 .wrapper {
     display: -webkit-box;
     display: -ms-flexbox;
