--- a/assets/scss/layout/_footer.scss
+++ b/assets/scss/layout/_footer.scss
@@ -11,11 +11,26 @@
       @media #{$info-phone} {
         padding: 50px 0 60px 0;
       }
+      .footer__explore{
+        a{
+          color: #fff;
+          font-family: 'Open Sans', sans-serif;
+          font-weight: 400;
+          font-size: 13px;
+          line-height: 2;
+          padding-bottom: 15px;
+          display: block;
+        }
+        // .footer__explore-display-grid{
+        //   display: grid;
+        // }
+      }
       h2{
         font-family: 'Pacifico', cursive;
         font-weight: 400;
         font-size: 28px;
         color: #fff;
+       
       }
       p{
         font-family: 'Open Sans', sans-serif;
