--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7443,6 +7443,10 @@ body {
   background-color: #fff;
 }
 
+main {
+  font-family: 'Open Sans', sans-serif;
+}
+
 .wrapper {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -7797,6 +7801,10 @@ header .header .header__menu ul li::before {
   top: 0;
   height: 2px;
   left: 0;
+  -webkit-transition: .4s all;
+  transition: .4s all;
+  -webkit-transition-delay: .2s;
+          transition-delay: .2s;
 }
 
 header .header .header__menu ul li:hover::before {
@@ -7897,14 +7905,22 @@ header .header .header__menu ul li a:focus {
   color: transparent;
 }
 
-.slick-dots {
+.background-features .slick-dots {
   bottom: -75%;
 }
 
 @media only screen and (max-width: 1160px) {
-  .slick-dots {
+  .background-features .slick-dots {
     bottom: -50%;
   }
+}
+
+.team .slick-dots {
+  bottom: -20%;
+}
+
+.team .slick-slide {
+  text-align: center;
 }
 
 .slick-next, .slick-prev {
@@ -7959,6 +7975,8 @@ header .header .header__menu ul li a:focus {
   width: 20px;
   height: 15px;
   background-size: cover;
+  -o-object-fit: none;
+     object-fit: none;
 }
 
 .title p {
@@ -7973,6 +7991,16 @@ header .header .header__menu ul li a:focus {
 @media only screen and (max-width: 767px) {
   .title p {
     padding: 0 20px;
+  }
+}
+
+.background-features, .team {
+  padding: 95px 0;
+}
+
+@media only screen and (max-width: 767px) {
+  .background-features, .team {
+    padding: 50px 0;
   }
 }
 
@@ -7993,6 +8021,16 @@ footer .footer {
   footer .footer {
     padding: 50px 0 60px 0;
   }
+}
+
+footer .footer .footer__explore a {
+  color: #fff;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 400;
+  font-size: 13px;
+  line-height: 2;
+  padding-bottom: 15px;
+  display: block;
 }
 
 footer .footer h2 {
@@ -8114,7 +8152,6 @@ footer .footer .footer-black {
 
 .background-features {
   background-color: #f4f7f9;
-  padding: 80px 0;
 }
 
 .background-features .features {
@@ -8184,6 +8221,8 @@ footer .footer .footer-black {
 
 .background-works {
   background: #fff;
+  padding-top: 80px;
+  color: #fff;
 }
 
 .background-works .works {
@@ -8198,6 +8237,13 @@ footer .footer .footer-black {
       -ms-flex-pack: center;
           justify-content: center;
   margin-bottom: 35px;
+}
+
+@media only screen and (max-width: 767px) {
+  .background-works .works .works__menu {
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+  }
 }
 
 .background-works .works .works__menu button {
@@ -8216,14 +8262,6 @@ footer .footer .footer-black {
 
 @media only screen and (max-width: 767px) {
   .background-works .works .works__menu button {
-    padding: 10px 5px;
-    margin: 0;
-  }
-}
-
-@media only screen and (max-width: 320px) {
-  .background-works .works .works__menu button {
-    font-size: 13px;
     padding: 10px 5px;
     margin: 0;
   }
@@ -8282,28 +8320,46 @@ footer .footer .footer-black {
   width: 50px;
   border: 1px solid;
   border-radius: 80px;
-  padding: 16px;
+  padding: 14px;
   -o-object-fit: contain;
      object-fit: contain;
 }
 
-@media only screen and (max-width: 767px) {
+@media only screen and (max-width: 992px) {
   .background-works .works .works__content-hover img {
-    height: 4vw;
-    width: 4vw;
-    padding: 1vw;
+    height: 40px;
+    width: 40px;
+    padding: 10px;
   }
 }
 
 .background-works .works .works__content-hover h3 {
   font-weight: bold;
-  font-size: 1vw;
+  font-size: 15px;
   line-height: 2.3;
 }
 
+@media only screen and (max-width: 992px) {
+  .background-works .works .works__content-hover h3 {
+    font-size: 13px;
+  }
+}
+
+@media only screen and (max-width: 767px) {
+  .background-works .works .works__content-hover h3 {
+    font-size: 12px;
+  }
+}
+
 .background-works .works .works__content-hover p {
-  font-size: .9vw;
+  font-size: 13px;
   font-weight: 400;
+}
+
+@media only screen and (max-width: 992px) {
+  .background-works .works .works__content-hover p {
+    font-size: 11px;
+  }
 }
 
 .background-works .works .hidden {
@@ -8311,7 +8367,7 @@ footer .footer .footer-black {
 }
 
 .background-works .works .height {
-  min-height: 500px;
+  min-height: 250px;
 }
 
 .background-works .works #filter button:focus {
@@ -8324,6 +8380,8 @@ footer .footer .footer-black {
 
 .background-works .works #posts {
   margin: 0 auto;
+  display: inline-block;
+  width: 100%;
 }
 
 .background-works .works #posts .post {
@@ -8333,7 +8391,12 @@ footer .footer .footer-black {
   cursor: pointer;
   position: relative;
   z-index: 1;
-  display: inline-block;
+}
+
+@media only screen and (max-width: 1160px) {
+  .background-works .works #posts .post {
+    width: calc(100%/2);
+  }
 }
 
 .background-works .works #posts .post:hover .works__content-hover {
@@ -8358,15 +8421,301 @@ footer .footer .footer-black {
   width: 100%;
 }
 
+.team {
+  font-family: 'Open Sans', sans-serif;
+}
+
+.team .team__content .team__content__card {
+  text-align: center;
+  max-width: 270px;
+}
+
+.team .team__content .team__content__card:hover .team__content__text h3 {
+  color: #0eb493;
+}
+
+.team .team__content .team__content__card .team__content__img {
+  position: relative;
+  padding: 0;
+  overflow: hidden;
+  color: #fff;
+}
+
+.team .team__content .team__content__card .team__content__img:hover .team__content__img__hover {
+  opacity: 1;
+}
+
+.team .team__content .team__content__card .team__content__img .team__content__img__hover {
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  -webkit-transition: .4s all;
+  transition: .4s all;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-item-align: center;
+      align-self: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  background-color: rgba(32, 181, 151, 0.8);
+  padding: 20px;
+}
+
+.team .team__content .team__content__card .team__content__img .team__content__img__hover h3, .team .team__content .team__content__card .team__content__img .team__content__img__hover p {
+  font-size: 16px;
+  line-height: 1.6;
+}
+
+.team .team__content .team__content__card .team__content__img .team__content__img__hover h3:not(p), .team .team__content .team__content__card .team__content__img .team__content__img__hover p:not(p) {
+  font-weight: bold;
+}
+
+.team .team__content .team__content__card .team__content__img .team__content__img__hover .img__hover__icon a {
+  outline: none;
+}
+
+.team .team__content .team__content__card .team__content__img .team__content__img__hover .img__hover__icon i {
+  color: #fff;
+  font-size: 22px;
+  background-color: #0d7c66;
+  width: 40px;
+  height: 40px;
+  padding: 10px 0;
+  -webkit-transition: .4s all;
+  transition: .4s all;
+}
+
+.team .team__content .team__content__card .team__content__img .team__content__img__hover .img__hover__icon i:hover {
+  background-color: #13c4a0;
+  color: #000;
+}
+
+.team .team__content .team__content__card .team__content__text {
+  margin-top: 10px;
+  height: 60px;
+}
+
+.team .team__content .team__content__card .team__content__text h3 {
+  font-size: 18px;
+  font-weight: 600;
+  color: #000;
+  line-height: 2;
+}
+
+.team .team__content .team__content__card .team__content__text p {
+  color: #73828d;
+  font-weight: 400;
+  font-size: 13px;
+}
+
+.background-facts {
+  background-image: url("../img/background-facts.png");
+  padding: 100px 0 150px 0;
+  background-size: cover;
+  background-position: center;
+  color: #fff;
+}
+
+.background-facts .facts {
+  text-align: center;
+}
+
+.background-facts .facts .facts__img {
+  border: 2px solid #7f8a91;
+  border-radius: 80px;
+  width: 130px;
+  height: 130px;
+  margin: 10px auto;
+}
+
+.background-facts .facts img {
+  padding: 45px;
+}
+
+.background-facts .facts h3 {
+  font-size: 60px;
+  font-weight: 600;
+  margin: 40px 0 10px 0;
+}
+
+.background-facts .facts p {
+  font-size: 18px;
+  text-transform: uppercase;
+  line-height: 1.5;
+}
+
+.discuss {
+  padding-top: 90px;
+}
+
+.discuss .container {
+  color: #000;
+}
+
+.discuss .container h3 {
+  font-size: 23px;
+  margin-bottom: 40px;
+}
+
+.discuss .container p {
+  color: #6a737b;
+  padding-right: 70px;
+  font-size: 13px;
+}
+
+.discuss .container h3, .discuss .container p {
+  line-height: 1.5;
+}
+
+.discuss .container h2 {
+  font-size: 26px;
+  font-weight: bold;
+}
+
+@media only screen and (max-width: 992px) {
+  .discuss .container h2 {
+    margin-top: 15px;
+  }
+}
+
+.discuss .container .discuss__input {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin: 20px 0;
+}
+
+.discuss .container .discuss__input input {
+  width: 48%;
+}
+
+.discuss .container input {
+  width: 100%;
+  height: 60px;
+  border: none;
+  border-bottom: 1px solid  #cccccc;
+  outline: none;
+}
+
+.discuss .container input:focus {
+  border-bottom: 1px solid #cccccc;
+}
+
+.discuss .container input::-webkit-input-placeholder {
+  font-weight: 600;
+  color: #cccccc;
+}
+
+.discuss .container input:-ms-input-placeholder {
+  font-weight: 600;
+  color: #cccccc;
+}
+
+.discuss .container input::-ms-input-placeholder {
+  font-weight: 600;
+  color: #cccccc;
+}
+
+.discuss .container input::placeholder {
+  font-weight: 600;
+  color: #cccccc;
+}
+
+.discuss .container .discuss__button {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  margin: 30px 0;
+}
+
+.discuss .container .discuss__button img {
+  margin-right: 10px;
+  background-size: cover;
+}
+
+.discuss .container .discuss__button a {
+  outline: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  text-align: right;
+  color: #000;
+  font-size: 16px;
+  font-weight: 400;
+}
+
+.discuss .container .discuss__button a:hover {
+  color: gray;
+  -webkit-transition: .4s all;
+  transition: .4s all;
+}
+
+.discuss .container .discuss__icon {
+  display: table-caption;
+  line-height: 2.7;
+  cursor: pointer;
+}
+
+@media only screen and (max-width: 992px) {
+  .discuss .container .discuss__icon {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .discuss .container .discuss__icon img {
+    margin: 5px;
+    background-size: cover;
+  }
+}
+
+.discuss .container .col-md-1 {
+  text-align: -webkit-right;
+}
+
+.discuss .discuss__map {
+  background-image: url("../img/map.png");
+  position: relative;
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 220px;
+  margin-top: 80px;
+}
+
+.discuss .discuss__map::after {
+  content: "";
+  position: absolute;
+  height: 5px;
+  background-color: #062033;
+  width: 100%;
+  bottom: 0;
+}
+
 .banner {
   font-family: 'Open Sans', sans-serif;
 }
 
 .banner img {
   width: 100%;
+  min-height: 350px;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+  -o-object-fit: cover;
+     object-fit: cover;
   position: relative;
 }
 
@@ -8377,8 +8726,14 @@ footer .footer .footer-black {
 }
 
 .banner .banner__content h2 {
-  font-size: 4.2vw;
+  font-size: 62px;
   font-weight: 300;
+}
+
+@media only screen and (max-width: 767px) {
+  .banner .banner__content h2 {
+    font-size: 30px;
+  }
 }
 
 .banner .banner__content h2 span {
@@ -8386,7 +8741,7 @@ footer .footer .footer-black {
 }
 
 .banner .banner__content p {
-  font-size: 4vw;
+  font-size: 48px;
   font-weight: 300;
   line-height: 1.5;
   padding-bottom: 15px;
@@ -8395,6 +8750,7 @@ footer .footer .footer-black {
 @media only screen and (max-width: 767px) {
   .banner .banner__content p {
     padding-bottom: 0;
+    font-size: 25px;
   }
 }
 
@@ -8404,7 +8760,14 @@ footer .footer .footer-black {
 
 .banner .banner__content .banner__content-border {
   position: relative;
-  font-size: 1.8vw;
+  font-size: 18px;
+  font-weight: 300;
+}
+
+@media only screen and (max-width: 767px) {
+  .banner .banner__content .banner__content-border {
+    font-size: 13px;
+  }
 }
 
 .banner .banner__content .banner__content-border::before {
