refactor: header background

--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -92,7 +92,7 @@ header{
           position: fixed;
           width: 100%;
           height: 100%;
-          background: #deb887;
+          background: $green-footer;
           right: -100%;
           top: 0;
           text-align: center;
