--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7728,7 +7728,7 @@ header .header .header__menu {
     position: fixed;
     width: 100%;
     height: 100%;
-    background: #deb887;
+    background: #1ea78d;
     right: -100%;
     top: 0;
     text-align: center;
