--- a/assets/scss/layout/_footer.scss
+++ b/assets/scss/layout/_footer.scss
@@ -20,6 +20,12 @@
           line-height: 2;
           padding-bottom: 15px;
           display: block;
+          transition: .4s;
+          transition: .4s all;
+          &:hover{
+            color: rgb(241, 226, 13);
+            transition: .4s;
+          }
         }
         // .footer__explore-display-grid{
         //   display: grid;
